Fixed header z-index

--- a/assets/styles/partials/_header.scss
+++ b/assets/styles/partials/_header.scss
@@ -1,7 +1,7 @@
 .menu {
   background-color: $dark;
   position: fixed;
-  z-index: 2;
+  z-index: 4;
   width: 100vw;
 }
 
